# Waste-System

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: config.py  container.py  logger.py  main.py  settings.py
src/application/abstractions/daos/: base.py  i_organization_dao.py  i_storage_dao.py  i_waste_transfer_dao.py  i_waste_type_dao.py
src/application/abstractions/repositories/: base.py  i_organization_repository.py  i_storage_repository.py  i_waste_transfer_repository.py  i_waste_type_repository.py
src/application/builders/: base.py  director.py
src/application/builders/organization/: i_organization_builder.py  organization_builder.py
src/application/contracts/: base.py  i_organization_service.py  i_storage_service.py  i_waste_transfer_service.py  i_waste_type_service.py
src/application/services/: organization_service.py  storage_service.py  waste_transfer_service.py  waste_type_service.py
src/core/data_structures/: collector.py
src/core/decorators/: validate_types.py
src/core/enums/: status_code.py
src/core/exceptions/: base.py
src/core/objects/: immutable.py  incomparable.py  sealed.py  serializable.py
src/infrastructure/cache/: redis.py
src/infrastructure/database/: database.py  unit_of_work.py
src/infrastructure/migrations/: env.py
tests/unittests/entities/: organization_tests.py  storage_tests.py
tests/unittests/value_objects/: date_tests.py  id_tests.py  name_tests.py  quantity_tests.py
(+45 files in other folders)
