[tool.poetry]
name = "westesystem"
version = "0.1.0"
description = ""
authors = ["noloquideus <'manukyandaniila@yandex.ru'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
gevent = "^24.10.3"
fastapi-cache2-fork = "^0.5.0"
redis = "^5.1.1"
sqladmin = {extras = ["full"], version = "^0.20.0"}


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
